[tool.poetry]
name = "django-crud"
version = "0.1.0"
description = ""
authors = ["maisjamil1 <maisjamil17118@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
